fix: update version to 1.0.4 and enhance color inversion for Medicare.gov dark mode

--- a/Medicare-Gov-Dark-Mode.user.css
+++ b/Medicare-Gov-Dark-Mode.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Medicare.Gov - Dark Mode
 @namespace      typpi.online
-@version        1.0.3
+@version        1.0.4
 @description    Dark mode for Medicare.gov
 @author         Nick2bad4u
 @license        UnLicense
@@ -11,6 +11,7 @@
 @-moz-document domain("medicare.gov") {
 	/* Invert colors except images and videos */
 	:is(html:not([stylus-iframe]), img, svg, video) {
+		-webkit-filter: invert(1) hue-rotate(180deg) !important;
 		filter: invert(1) hue-rotate(180deg) !important;
 	}
 }
